--- a/portfolio.html
+++ b/portfolio.html
@@ -440,14 +440,14 @@
                 
                             <address class="address">
                                 <ul class="address__list list">
-                                    <li class="adress__item">
-                                        <a class="contact-adress link" href="https://goo.gl/maps/8bbEBqnTATMpC2DeA" target="_blank"
+                                    <li class="address__item">
+                                        <a class="contact-address link" href="https://goo.gl/maps/8bbEBqnTATMpC2DeA" target="_blank"
                                             rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                                     </li>
-                                    <li class="adress__item">
+                                    <li class="address__item">
                                         <a class="contact-info link" href="mailto:info@example.com">info@example.com</a>
                                     </li>
-                                    <li class="adress__item">
+                                    <li class="address__item">
                                         <a class="contact-info link" href="tel:+380991111111=">+38 099 111 11 11</a>
                                     </li>
                                 </ul>
